--- a/style.css
+++ b/style.css
@@ -248,9 +248,9 @@ h1 {
 	align-items: flex-start;
 	background-image: linear-gradient(15deg, #0f4667 0%, #2a6973 150%);
 	display: flex;
-	min-height: 100%;
-	justify-content: center;
-  padding: 30px 5px 30px 5px !important;
+	/* min-height: 100%; */
+	justify-content:  space-around;
+  padding: 15px !important;
   margin: 0 !important;
 	/* padding: var(--spacing-xxl) var(--spacing-l);
   padding-top: 50px;
