--- a/style.css
+++ b/style.css
@@ -386,9 +386,18 @@ ul#redesBottom li.twitter a{ background-position:-191px -36px}
 /* por lo gral utilizan @media screen and (max-width:480px){}*/ 
 /* col-xs */
 @media (max-width: 767px) {
+
+.hero-section{
+    justify-content:space-around ;
+    padding-top: 10px !important;
+    margin: 0 !important;
+}
+  
 .card-grid{
     grid-template-columns: repeat(1, 1fr); 
-}
+    padding: 0 !important; 
+    margin: 0 !important; 
+}   
 
 .card-grid h1{
     font-size: 25px;
@@ -446,6 +455,12 @@ nav ul li {
 /* col-sm */
 @media (min-width: 768px) and (max-width: 991px) {
 
+.hero-section{
+    justify-content:space-around ;
+    padding-top: 10px !important;
+    margin: 0 !important;
+}
+
 .card-grid{
   grid-template-columns: repeat(3, 1fr); 
   padding: 0 !important; 
@@ -495,12 +510,6 @@ nav ul li {
   margin: 0;
 }
 
-.hero-section{
-	justify-content:space-around ;
-  padding-top: 10px !important;
-  margin: 0 !important;
-}
-
 }
   
 /* Available breakpoints medium, large, extra large and extra extra large */
@@ -526,5 +535,4 @@ nav ul li {
 .box-col-publicidad{ margin-bottom:20px;}
 .contacto{ margin-top:0}
 #contactForm{ margin:0 0 40px 0} */
-
 }
